--- a/index.html
+++ b/index.html
@@ -78,6 +78,71 @@
      <section class="container">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
+              <div class="carousel-item active">
+                  <div class="row p-5 panda-bg-info bg-gradient d-flex align-items-center">
+                      <div class="col-lg-5">
+                          <h1>Cool Dude Headphone
+                          </h1>
+                          <p>This is the best headphone in the world for people who just want to waste time in
+                              front of funky world.</p>
+                          <h1>$420</h1>
+                          <button class="panda-btn-buy-now">Buy Now</button>
+                      </div>
+                      <div class="col-lg-7">
+                          <img src="images/rfc/WhatsApp Image 2021-08-12 at 10.34.14 PM.jpeg" class="d-block w-100" alt="...">
+                      </div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="row p-5 panda-bg-info bg-gradient d-flex align-items-center">
+                      <div class="col-lg-5">
+                          <h1>Mega LCD TV For Sports
+
+                          </h1>
+                          <p>This is the best headphone in the world for people who just want to waste time in
+                              front of funky world.</p>
+                          <h1>$420</h1>
+                          <button class="panda-btn-buy-now">Buy Now</button>
+                      </div>
+                      <div class="col-lg-7">
+                          <img src="images/rfc/WhatsApp Image 2021-08-26 at 4.31.07 PM.jpeg" class="d-block w-100" alt="...">
+                      </div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="row p-5 panda-bg-info bg-gradient d-flex align-items-center">
+                      <div class="col-lg-5">
+                          <h1>X-Box for your living room
+
+                          </h1>
+                          <p>This is the best headphone in the world for people who just want to waste time in
+                              front of funky world.</p>
+                          <h1>$600</h1>
+                          <button class="panda-btn-buy-now">Buy Now</button>
+                      </div>
+                      <div class="col-lg-7">
+                          <img src="images/rfc/190262978_305984277701360_6075842682707066409_n.jpg" class="d-block w-100" alt="...">
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+          </button>
+      </div>
+  </section>
+</header>
+<main>
+     <!-- <section class="container">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
               <div class="carousel-item active ">
                   <div class="row p-5 .bg-success d-flex align-items-center ">
                       <div class="col-lg-7">
@@ -107,7 +172,7 @@
                           <h1>$600</h1>
                           <button class="panda-btn-buy-now">Buy Now</button>
                       </div> -->
-                      <div class="col-lg-12">
+                      <!-- <div class="col-lg-12">
                           <img src="./images/rfc/201_n.jpg" class="d-block w-100" alt="...">
                       </div>
                   </div>
@@ -126,14 +191,14 @@
       </div>
   </section>
 </header>
-<main>
+<main> --> -->
 
   <section class="container" id="Jersey">
     <h2>Jersey</h2>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
             <div class="card border-0 shadow-lg h-100">
-                <img src="./images/rfc/j-1.jpeg" class="card-img-top" alt="...">
+                <img src="./images/jcr/WhatsApp Image 2021-08-26 at 4.43.24 PM (1).jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Home kit</h5>
                     <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
@@ -146,7 +211,7 @@
         </div>
         <div class="col">
             <div class="card border-0 shadow-lg h-100">
-                <img src="./images/rfc/j-2.jpg" class="card-img-top" alt="...">
+                <img src="./images/jcr/WhatsApp Image 2021-08-26 at 4.43.24 PM.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Away kit</h5>
                     <!-- <p class="card-text">This card has supporting text below as a natural lead-in to additional
@@ -159,7 +224,7 @@
         </div>
         <div class="col">
             <div class="card border-0 shadow-lg h-100">
-                <img src="./images/rfc/j-3.jpg" class="card-img-top" alt="...">
+                <img src="./images/jcr/j-3.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Alternate kit</h5>
                     <p class="card-text">coming soon</p>
