--- a/players.html
+++ b/players.html
@@ -241,7 +241,7 @@
                  </article>
 
             </div>
-            <div class="player">
+            <!-- <div class="player">
                 <div class="player-banner">
                     <img src="./images/players/abid_n.jpg" alt="">
             <article>
@@ -260,7 +260,7 @@
                             
                  </article>
 
-            </div>
+            </div> -->
             
             <div class="player">
                 <div class="player-banner">
