--- a/players.html
+++ b/players.html
@@ -241,26 +241,7 @@
                  </article>
 
             </div>
-            <!-- <div class="player">
-                <div class="player-banner">
-                    <img src="./images/players/abid_n.jpg" alt="">
-            <article>
-
-                </div>
-                    <h3 class="player-title">Abid<full>
-                            </h3> <br>
-                            <p>Jersey number - 11 <br>
-                            <p>Mobile number - 1784583749<br>
-                            <p>Position - Central Attacking Midfielde<br>
-                            <p>Fav player - Messi, Fernando Torres<br>
-                            <p>University name  - BRAC University<br>
-                            <p> Profession - STUDENT <br>
-
-                            </p>  
-                            
-                 </article>
-
-            </div> -->
+            <!-- git -->
             
             <div class="player">
                 <div class="player-banner">
