--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
       <li> In order to get all the facilities of the club, a minimum of 10 matches have to be played for the club
       </li>
       <li>All members of the club must humbly accept the decision of the club committee</li>
+      <li>All members of the club must humbly accept the decision of the club committee</li>
+      <li> In order to get all the facilities of the club ,will have to play five matches  in a month</li>
+     
   </div>
 </div>
       </div>
